--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "morgan": "^1.10.1"
   },
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
